[package]
name = "velorenmods"
version = "0.1.0"
authors = ["ccgauche <gaucheron.laurent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer-runtime = "0.17.1"
serde = {version = "1.0.118", features = ["derive"]}
bincode = "1.3.1"
veloren_api_common = { path = "./veloren_api_common"}