[package]
name = "veloren_api"
version = "0.1.0"
authors = ["ccgauche <gaucheron.laurent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
serde = {version = "1.0.118", features = ["derive"]}
veloren_proc = {path = "./veloren_proc"}
veloren_api_common = {path = "../veloren_api_common"}