[package]
name = "wasmplugin"
version = "0.1.0"
authors = ["ccgauche <gaucheron.laurent@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "on"

[dependencies]
veloren_api = {path = "../veloren_api"}
serde = {version = "1.0.118", features = ["derive"]}